2007-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Take value from chunker if it succeed and
				 taper fail.

2007-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Limit splitsize to 1G in PORT-WRITE.

2007-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/tapelist.c (append_to_tape): Don't call dump_tapelist.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Exit with a message if the
					configuration file doesn't exist.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Fix segfault.

2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Fix.

2007-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/set_commands.c (set_tape): Don't amfree(tape).
	* oldrecover-src/set_commands.c (set_tape): Don't amfree(tape).

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Ouput quoted diskname in "DUMP SUMMARY"
	  section.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/scsi-linux.c, common-src/security-util.c,
	  common-src/stream.c, oldrecover-src/amrecover.c,
	  restore-src/restore.c, server-src/amcheck.c,
	  server-src/taper.c: Use SIZE_T_FMT and SSIZE_T_FMT instead of %z.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/debug.c: Remove old file in current directory.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-chio.pl.in: Typo.

2007-02-21  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Remove match for path_on_disk_slash.

2007-02-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Set splitsize to 0 if no data in file.
	* server-src/amflush.c: Don't send FLUSH request if no data in file.
	* server-src/planner.c: Don't send FLUSH request if no data in file.
	* server-src/driver.c: Don't send request to taper if no data in file.